<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="401dp"
        android:layout_height="42dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/waves_of_food"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="238dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/sign_up_here_for_your_nadmin_dashboard"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/choose_location"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/arrow_circle_down"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <AutoCompleteTextView
            android:id="@+id/listOfLocations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alatsi"
            android:inputType="none"
            android:text="Choose Location" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/nameOfOwner"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/user_02"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Name of Owner"
        android:inputType="text"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <EditText
        android:id="@+id/restaurantName"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/home_02"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Name of Restaurant"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/nameOfOwner"
        app:layout_constraintStart_toStartOf="@+id/nameOfOwner"
        app:layout_constraintTop_toBottomOf="@+id/nameOfOwner" />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/mail_02"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Email or Phone Number"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="170dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbutton"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/alreadyhavebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/createButton"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/createButton"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/designed_by_nshivam_kachawar"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>